solution: introduce JSpecify null check annotations